feat(electron): Implement Electron app packaging and dev setup
This commit introduces Electron support for the FlowLog application, enabling it to run as a desktop application.

Key changes include:
- **Project configuration:** Updated `package.json` to include Electron dependencies, scripts for development and building, and Electron Builder configuration.
- **Main process:** Added `electron/main.ts` to handle the Electron application's main process logic, including window creation and loading content.
- **Vite configuration:** Adjusted `vite.config.ts` to support relative pathing for Electron builds.
- **TypeScript configuration:** Added `electron/tsconfig.json` for TypeScript compilation within the Electron environment.
- **Index HTML:** Minor adjustments to `index.html` for language and to accommodate Electron's resource loading.
- **Development workflow:** Introduced `concurrently` and `wait-on` for a smoother development experience, allowing simultaneous Vite and Electron server startup.

--- a/package.json
+++ b/package.json
@@ -1,23 +1,53 @@
 {
   "name": "flowlog",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
+  "version": "1.0.0",
+  "description": "A minimalist, agile project management tool.",
+  "main": "dist-electron/main.js",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "dev": "concurrently \"npm run dev:vite\" \"npm run dev:electron\"",
+    "dev:vite": "vite",
+    "dev:electron": "wait-on tcp:5173 && cross-env NODE_ENV=development electron .",
+    "build": "tsc && vite build && tsc -p electron/tsconfig.json && electron-builder"
   },
+  "keywords": [],
+  "author": "FlowLog",
+  "license": "ISC",
   "dependencies": {
-    "react": "^19.2.1",
-    "lucide-react": "^0.556.0",
-    "react-dom": "^19.2.1",
-    "zustand": "^5.0.9"
+    "clsx": "^2.1.0",
+    "date-fns": "^3.3.1",
+    "lucide-react": "^0.344.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "tailwind-merge": "^2.2.1",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
-    "@types/node": "^22.14.0",
-    "@vitejs/plugin-react": "^5.0.0",
-    "typescript": "~5.8.2",
-    "vite": "^6.2.0"
+    "@types/node": "^20.11.24",
+    "@types/react": "^18.2.61",
+    "@types/react-dom": "^18.2.19",
+    "@vitejs/plugin-react": "^4.2.1",
+    "concurrently": "^8.2.2",
+    "cross-env": "^7.0.3",
+    "electron": "^29.1.0",
+    "electron-builder": "^24.13.3",
+    "electron-squirrel-startup": "^1.0.0",
+    "typescript": "^5.3.3",
+    "vite": "^5.1.4",
+    "wait-on": "^7.2.0"
+  },
+  "build": {
+    "appId": "com.flowlog.app",
+    "productName": "FlowLog",
+    "win": {
+      "target": "nsis"
+    },
+    "directories": {
+      "output": "release"
+    },
+    "files": [
+      "dist/**/*",
+      "dist-electron/**/*",
+      "package.json"
+    ]
   }
 }
